--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -27,8 +27,16 @@ if ( is_file($caPaths['addConverted']) ) {
 	$dockerConvertFlag = "true";
 }
 $date = (date("n/d"));
+$dynamix = @parse_ini_file("/boot/config/plugins/dynamix/dynamix.cfg",true);
+if ( ! $dynamix['display']['theme'] )
+	$dynamix = @parse_ini_file("/usr/local/emhttp/plugins/dynamix/default.cfg",true);
+
+$theme = $dynamix['display']['theme'] ?: "black";
 ?>
+
 <link type='text/css' rel='stylesheet' href="<?=autov("/plugins/$plugin/skins/Narrow/css.php")?>" >
+<link type='text/css' rel='stylesheet' href='<?=autov("/plugins/dynamix/styles/community.applications-$theme.css")?>'>
+
 <script src='<?autov("/plugins/community.applications/javascript/libraries.js")?>'></script>
 <script>
 var URL = "/plugins/<?=$plugin?>/include/exec.php";
