Fixed: attempting to upgrade OS from the banner while on Apps Tab would result in a transparent background for the confirmation dialog

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -411,6 +411,7 @@ function mySpinner() {
 function myCloseSpinner() {
 	swal.close();
 	$("div.spinner").hide();
+	swalBackground("white");
 }
 
 function myCloseAlert() {
