Looks like CA won't interfere anymore with unRaid's swal if it pops up

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -411,6 +411,8 @@ function mySpinner() {
 function myCloseSpinner() {
 	swal.close();
 	$("div.spinner").hide();
+	$(".sweet-alert").hide();
+	swalBackground("white");
 }
 
 function myCloseAlert() {
