Fixed: see below
If a fatal error happens, close the spinner to avoid locking up the browser tab

If a plugin version is unknown, display Unknown on the popup

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1201,6 +1201,7 @@ function post(options,callback) {
 				}
 			} catch(e) {
 				myCloseAlert();
+				myCloseSpinner();
 				$("#templates_content").html("Something really wrong went on during "+options.action+"<br>Post the ENTIRE contents of this message in the Community Applications Support Thread<br><br>"+stripTags(retval));
 				throw new Error("Something went badly wrong!");
 			}
