--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1281,17 +1281,17 @@ function feedWarning(currentServer) {
 
 </script>
 
-> <i class='fa fa-sort enabledIcon' aria-hidden='true' style='font-size:2rem;'></i> - This chooses how to sort the results<br><br>
-> <i class='fa fa-download' aria-hidden='true' style='font-size:2rem;'></i> <i class='fa fa-edit' aria-hidden='true' style='font-size:2rem;'></i> - These icons respectively will <span class='ca_bold'>Install or Edit</span> an application<br>
-> <i class='fa fa-globe' aria-hidden='true' style='font-size:2rem;'></i> <i class='fa fa-cog' aria-hidden='true' style='font-size:2rem;'></i> - Clicking these icons will take you to an application's GUI or settings<br>
-> <span class='ca_fa-support' style='font-size:2rem;'></span> This will take you to the appropriate support thread for an application<br>
-> <span class='ca_fa-project' style='font-size:2rem;'></span> This will take you to the project page for an application<br>
-> <i class='fa fa-window-close' aria-hidden='true' style='font-size:2rem;color:maroon;'></i> - Clicking this icon will uninstall the application or delete it from the lists depending upon your current section<br>
-> <span class='unpinned'> </span><span class='pinned'></span> Clicking these icons will pin / unpin an application for later viewer (from the Pinned Apps section)<br>
-> <i class='fa fa-info-circle' aria-hidden='true' style='font-size:2rem;'></i> Clicking this will display more information about the application.  NOTE: You can also click on the application's icon to display more information.<br>
-> <i class='fa fa-exclamation-triangle' aria-hidden='true' style='font-size:2rem;'></i> Clicking this will display any warnings or extra comments about the application<br>
-> <input type='checkbox' checked> On the previous apps section, you can select  multiple applications to install simultaneously<br>
-> <span class='ca_thumbsup' style='margin-left:0px; font-size:2rem;'></span> This is a recommended application based upon support requests and answers in the unRaid forum<br>
+> <i class='fa fa-sort enabledIcon' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;This chooses how to sort the results<br><br>
+> <i class='fa fa-download' aria-hidden='true' style='font-size:2rem;'></i> <i class='fa fa-edit' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;These icons respectively will <span class='ca_bold'>Install or Edit</span> an application<br>
+> <i class='fa fa-globe' aria-hidden='true' style='font-size:2rem;'></i> <i class='fa fa-cog' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;Clicking these icons will take you to an application's GUI or settings<br>
+> <span class='ca_fa-support' style='font-size:2rem;'></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This will take you to the appropriate support thread for an application<br>
+> <span class='ca_fa-project' style='font-size:2rem;'></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This will take you to the project page for an application<br>
+> <i class='fa fa-window-close' aria-hidden='true' style='font-size:2rem;color:maroon;'></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clicking this icon will uninstall the application or delete it from the lists depending upon your current section<br>
+> <span class='unpinned'> </span><span class='pinned'></span> &nbsp;&nbsp;&nbsp;Clicking these icons will pin / unpin an application for later viewer (from the Pinned Apps section)<br>
+> <i class='fa fa-info-circle' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clicking this will display more information about the application.  NOTE: You can also click on the application's icon to display more information.<br>
+> <i class='fa fa-exclamation-triangle' aria-hidden='true' style='font-size:2rem;'></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clicking this will display any warnings or extra comments about the application<br>
+> <input type='checkbox' checked> &nbsp;&nbsp;&nbsp;On the previous apps section, you can select  multiple applications to install simultaneously<br>
+> <span class='ca_thumbsup' style='margin-left:0px; font-size:2rem;'></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This is a recommended application based upon support requests and answers in the unRaid forum<br>
 > <center>For support for this plugin, visit <a title='click for help' href="https://lime-technology.com/forums/topic/38582-plug-in-community-applications/" target="_blank">HERE</a></center>
 > <center><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"></a></center>
 > 
