--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1218,7 +1218,9 @@ function post(options,callback) {
 				try {
 					eval(result.script);
 				} catch(e) {
+					console.log("Could not execute script "+e);
 					alert("Could not execute Script "+e);
+					throw new Error("Could not execute script");
 				}
 			}
 			postCount--;
