--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/PluginAPI.page
@@ -5,7 +5,7 @@ Link='nav-user'
 ###############################################################
 #                                                             #
 # Community Applications copyright 2015-2020, Andrew Zawadzki #
-#                    All Rights Reserved                      #
+#          Licenced under the terms of GNU GPLv2              #
 #                                                             #
 ###############################################################
 ?>
