--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -6,7 +6,7 @@ Icon="community.applications.png"
 ###############################################################
 #                                                             #
 # Community Applications copyright 2015-2020, Andrew Zawadzki #
-#                    All Rights Reserved                      #
+#          Licenced under the terms of GNU GPLv2              #
 #                                                             #
 ###############################################################
 
