--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -58,6 +58,14 @@ Remove program files when uninstalling?
 	
 > This setting will not remove the program files from the docker.img when uninstalling an application for faster reinstallation.  Generally recommended to leave this set to yes
 
+Allow CA to send any emergency notifications?
+: <select name='notifications' size='1'>
+	<?=mk_option($cfg['notifications'],"yes","Yes (Recommended)")?>
+	<?=mk_option($cfg['notifications'],"no","No")?>
+	</select>
+	
+> This setting allows CA to periodically scan your system (for known malware within applications etc) and alert you to their presence
+
 &nbsp;
 : <input type="submit" name="#apply" value="Apply" id='Apply'><input type="button" id="DONE" value="Done" onclick="done()">
 
